syntax = "proto3";

option java_multiple_files = true;
option java_package = "bale.messaging.v2";
option java_outer_classname = "Messaging";

package bale.messaging.v2;

service Messaging {
  rpc SendMessage (SendMessageRequest) returns (SendMessageReply) {}
}

message SendMessageRequest {
  MessagingPeer    peer = 1;
  uint64           rid = 2;
  MessagingMessage message = 3;
}

message SendMessageReply {
  uint64   unknown1 = 1;
  uint64   unknown2 = 2;
  repeated KeyValue keyValues = 4;
}

message KeyValue {
  string   key = 1;
  DataType value = 2;
}

message DataType {
  uint64 number = 4;
}

message MessagingPeer {
  uint32 unknown = 1;
  uint32 userId = 2;
}

message MessagingMessage {
  MessagingTextMessage textMessage = 15;
}

message MessagingTextMessage {
  string text = 1;
}

